Table scroll fix - nowrap

--- a/src/components/_table.scss
+++ b/src/components/_table.scss
@@ -80,6 +80,5 @@
 	//Scroll
 	&-scroll {
 		overflow-x: auto;
-		white-space: nowrap;
 	}
 }
